Changes with APR 0.9.5

  *) Makes the threads to behave like on posix. If the thread is created
     without APR_DETACH expect that the thread_join will be called, so don't
     close the handle in advance, if the thread has already finished.
     [Mladen Turk]
 
   *) The apr/test/Makefile.win is missing a target to build a
     readchild.exe that test is depending on but is never built.
     [Mladen Turk]
 
  *) Fix build issues in paths containing symlinks.  PR 8867.
     [Joe Orton]

  *) Update config.{guess,sub} for DragonFly BSD.  PR 29858.
     [Joe Orton]

  *) Win32: Fix bug in apr_socket_sendfile that interferred with
     Win32 LSPs. Bug is described in Apache 2.0 bugzilla report 
     23982 [Jan Bilek, Bill Stoddard]

  *) apr_proc_create() on Unix: Remove unnecessary check for read 
     access to the working directory of the child process.
     PR 30137.  [Jeremy Chadwick <apache jdc.parodius.com>]

  *) Win32: Fix bug tracking the file pointer on a file opened for 
     overlapped/APR_XTHREAD io. [Bill Stoddard]

  *) Fix FreeBSD atomics.  [Paul Querna <chip force-elite.com>]

  *) Fix apr_snprintf() to respect precision for small floating point
     numbers.  PR 29621.  [Artur Zaprzala <zybi talex.pl>]

  *) Add command type APR_SHELLCMD_ENV for creating a process
     which is started by the shell and which inherits the parent's
     environment variables.  [Jeff Trawick]

  *) Change default inter-process locking mechanisms: POSIX semaphores
     and pthread cross-process mutexes are not used by default; on 
     Solaris, fcntl locks are used by default.  [Joe Orton]

  *) Don't try to enable run-time linking on AIX < 4.2, as this
     results in invalid linker options being used.  PR 29170.  
     [Jeff Trawick]

  *) Remove apr_file_copy()'s 2Gb file size limit on some platforms.
     [Joe Orton]

  *) Don't assume getnameinfo() can handle IPv4-mapped IPv6 addresses
     on any platforms.