@@ -1,5 +1,8 @@
 Changes with APR 0.9.5
 
+  *) fix apr_file_dup and apr_file_dup2 win32 implementations
+     to create a mutex [Steve Hay <steve.hay uk.radan.com>]
+
   *) Makes the threads to behave like on posix. If the thread is created
      without APR_DETACH expect that the thread_join will be called, so don't
      close the handle in advance, if the thread has already finished.
